--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Thank to Leo Medina - JavaScript Developer
+Thank's to Leo Medina - JavaScript Developer
 https://www.youtube.com/channel/UCtJq04Cs5C3Z_WJxa_gW6JA
